main.tf
# Configure the Microsoft Azure Provider
terraform {
  required_providers {
    azurerm = {
      source = "hashicorp/azurerm"
      version = "~>2.0"
    }
  }
}
provider "azurerm" {
  features {}
}

# Create a resource group if it doesn't exist
resource "azurerm_resource_group" "testtaskgroup" {
    name     = "testtaskrg"
    location = "eastus"

    tags = {
        environment = "test-task"
    }
}

# Create virtual network
resource "azurerm_virtual_network" "testtasknetwork" {
    name                = "myVnet"
    address_space       = ["10.0.0.0/16"]
    location            = "eastus"
    resource_group_name = azurerm_resource_group.testtaskgroup.name

    tags = {
        environment = "test-task"
    }
}

# Create subnet
resource "azurerm_subnet" "testtasksubnet" {
    name                 = "mySubnet"
    resource_group_name  = azurerm_resource_group.testtaskgroup.name
    virtual_network_name = azurerm_virtual_network.testtasknetwork.name
    address_prefixes       = ["10.0.1.0/24"]
}

# Create public IPs
resource "azurerm_public_ip" "testtaskpublicip" {
    name                         = "myPublicIP"
    location                     = "eastus"
    resource_group_name          = azurerm_resource_group.testtaskgroup.name
    allocation_method            = "Dynamic"

    tags = {
        environment = "test-task"
    }
}

# Create Network Security Group and rule
resource "azurerm_network_security_group" "testtasknsg" {
    name                = "myNetworkSecurityGroup"
    location            = "eastus"
    resource_group_name = azurerm_resource_group.testtaskgroup.name

    security_rule {
        name                       = "SSH"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name                       = "Grafana"
        priority                   = 1002
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "3000"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name                       = "AppMetrics"
        priority                   = 1003
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "8000"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name                       = "Prometheus"
        priority                   = 1004
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "9090"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }

    tags = {
        environment = "test-task"
    }
}

# Create network interface
resource "azurerm_network_interface" "testtasknic" {
    name                      = "myNIC"
    location                  = "eastus"
    resource_group_name       = azurerm_resource_group.testtaskgroup.name

    ip_configuration {
        name                          = "myNicConfiguration"
        subnet_id                     = azurerm_subnet.testtasksubnet.id
        private_ip_address_allocation = "Dynamic"
        public_ip_address_id          = azurerm_public_ip.testtaskpublicip.id
    }

    tags = {
        environment = "test-task"
    }
}



# Connect the security group to the network interface
resource "azurerm_network_interface_security_group_association" "example" {
    network_interface_id      = azurerm_network_interface.testtasknic.id
    network_security_group_id = azurerm_network_security_group.testtasknsg.id
}

# Generate random text for a unique storage account name
resource "random_id" "randomId" {
    keepers = {
        # Generate a new ID only when a new resource group is defined
        resource_group = azurerm_resource_group.testtaskgroup.name
    }

    byte_length = 8
}

# Create storage account for boot diagnostics
resource "azurerm_storage_account" "mystorageaccount" {
    name                        = "diag${random_id.randomId.hex}"
    resource_group_name         = azurerm_resource_group.testtaskgroup.name
    location                    = "eastus"
    account_tier                = "Standard"
    account_replication_type    = "LRS"

    tags = {
        environment = "test-task"
    }
}

# Create (and display) an SSH key
resource "tls_private_key" "example_ssh" {
  algorithm = "RSA"
  rsa_bits = 4096
}
output "tls_private_key" {
    value = tls_private_key.example_ssh.private_key_pem
    sensitive = true
}

# Create virtual machine
resource "azurerm_linux_virtual_machine" "testtaskvm" {
    name                  = "weatherstation"
    location              = "eastus"
    resource_group_name   = azurerm_resource_group.testtaskgroup.name
    network_interface_ids = [azurerm_network_interface.testtasknic.id]
    size                  = "Standard_B1s"

    os_disk {
        name              = "myOsDisk"
        caching           = "ReadWrite"
        storage_account_type = "Standard_LRS"
    }

    source_image_reference {
        publisher = "Canonical"
        offer     = "0001-com-ubuntu-server-focal"
        sku       = "20_04-lts-gen2"
        version   = "latest"
    }

    computer_name  = "weatherstation"
    admin_username = "andrei"
    disable_password_authentication = true

    admin_ssh_key {
        username       = "andrei"
        public_key     = tls_private_key.example_ssh.public_key_openssh
    }

    boot_diagnostics {
        storage_account_uri = azurerm_storage_account.mystorageaccount.primary_blob_endpoint
    }

    tags = {
        environment = "test-task"
        role = "weather"
    }

}

data "azurerm_public_ip" "testtaskpublicip" {
  name                = "${azurerm_public_ip.testtaskpublicip.name}"
  resource_group_name = "${azurerm_linux_virtual_machine.testtaskvm.resource_group_name}"
}

output "public_ip_address" {
  value = "${data.azurerm_public_ip.testtaskpublicip.ip_address}"
}
